force-app/main/default/objects/Stock_Report__c/Stock_Report__c.object-meta.xml
<CustomObject>
    <label>Stock Report Record</label>
    <nameField>
        <label>Stock Report Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Report Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>