force-app/main/default/objects/Stock_Report__c/fields/Create_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Formula__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Create Date Formula</label>
    <type>Date</type>
</CustomField>