force-app/main/default/objects/Stock_Report__c/fields/date2__c.field-meta.xml
<CustomField>
    <fullName>date2__c</fullName>
    <label>date</label>
    <type>Date</type>
</CustomField>