force-app/main/default/objects/Stock_Report__c/fields/datetime__c.field-meta.xml
<CustomField>
    <fullName>datetime__c</fullName>
    <label>datetime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>