force-app/main/default/objects/Stock_Report__c/fields/import_file__c.field-meta.xml
<CustomField>
    <fullName>import_file__c</fullName>
    <label>import file</label>
    <length>255</length>
    <type>Text</type>
</CustomField>