force-app/main/default/objects/Stock_Report__c/fields/month_of_year__c.field-meta.xml
<CustomField>
    <fullName>month_of_year__c</fullName>
    <label>month of year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>