force-app/main/default/objects/Stock_Report__c/fields/product_id__c.field-meta.xml
<CustomField>
    <fullName>product_id__c</fullName>
    <label>product id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>