force-app/main/default/objects/Stock_Report__c/fields/stock_quantity__c.field-meta.xml
<CustomField>
    <fullName>stock_quantity__c</fullName>
    <label>stock quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>