force-app/main/default/objects/Stock_Report__c/fields/Stock_Report_Header__c.field-meta.xml
<CustomField>
    <fullName>Stock_Report_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Report Header</label>
    <referenceTo>Stock_Report_Header__c</referenceTo>
    <relationshipName>Stock_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>