force-app/main/default/objects/Stock_Report__c/fields/Stock_Report_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Report_Import_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stock Report Import Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>