force-app/main/default/objects/Stock_Report__c/fields/To_Be_Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Archive_Date__c</fullName>
    <formula>IF(
AND(
MONTH(date2__c) = 2,
DAY(date2__c) = 29
),
DATE(YEAR(date2__c)+ 5, 3,1),
DATE(YEAR(date2__c) + 5, MONTH(date2__c), DAY(date2__c))
)</formula>
    <label>To Be Archive Date</label>
    <type>Date</type>
</CustomField>