force-app/main/default/objects/Stock_Report__c/fields/To_Be_Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Deleted_Date__c</fullName>
    <label>To Be Archive Date</label>
    <type>DateTime</type>
</CustomField>