force-app/main/default/objects/Stock_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>distributor_id__c</columns>
    <columns>product_id__c</columns>
    <columns>date2__c</columns>
    <columns>deliver_stock_quantity__c</columns>
    <columns>ordered_stock_quantity__c</columns>
    <columns>sold_quantity__c</columns>
    <columns>stock_quantity__c</columns>
    <columns>import_file__c</columns>
    <columns>month_of_year__c</columns>
    <columns>week_of_year__c</columns>
    <columns>year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>