force-app/main/default/objects/Stock_Report__c/listViews/Today_Import.listView-meta.xml
<ListView>
    <fullName>Today_Import</fullName>
    <columns>NAME</columns>
    <columns>date2__c</columns>
    <columns>Account__c</columns>
    <columns>deliver_stock_quantity__c</columns>
    <columns>distributor_id__c</columns>
    <columns>import_file__c</columns>
    <columns>ordered_stock_quantity__c</columns>
    <columns>product_id__c</columns>
    <columns>sold_quantity__c</columns>
    <columns>stock_quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Import</label>
    <sharedTo>
        <group>VSE_Germany_CMS_Admin</group>
    </sharedTo>
</ListView>